// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser: object ObjectType 1`] = `
Object {
  "kind": "ObjectTypeLiteral",
  "props": Array [
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "Identifier",
        "name": "a",
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "NumberType",
        "value": "number",
      },
    },
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "Identifier",
        "name": "b",
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "StringType",
        "value": "string",
      },
    },
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "Identifier",
        "name": "c",
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "NumberTypeLiteral",
        "value": 1,
      },
    },
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "Identifier",
        "name": "d",
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "StringTypeLiteral",
        "value": "abc",
      },
    },
  ],
}
`;

exports[`parser: object ObjectType 2`] = `
Object {
  "kind": "ObjectTypeLiteral",
  "props": Array [],
}
`;

exports[`parser: object ObjectType: call signature 1`] = `
Object {
  "kind": "ObjectTypeLiteral",
  "props": Array [
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "ConstructSignature",
        "params": Array [
          Object {
            "kind": "FunctionTypeParam",
            "name": Object {
              "kind": "Identifier",
              "name": "someArg",
            },
            "type": Object {
              "kind": "NumberType",
              "value": "number",
            },
          },
        ],
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "TypeReference",
        "typeName": Object {
          "kind": "Identifier",
          "name": "boolean",
        },
      },
    },
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "CallSignature",
        "params": Array [
          Object {
            "kind": "FunctionTypeParam",
            "name": Object {
              "kind": "Identifier",
              "name": "a",
            },
            "type": Object {
              "kind": "NumberType",
              "value": "number",
            },
          },
          Object {
            "kind": "FunctionTypeParam",
            "name": Object {
              "kind": "Identifier",
              "name": "b",
            },
            "type": Object {
              "kind": "NumberType",
              "value": "number",
            },
          },
        ],
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "NumberType",
        "value": "number",
      },
    },
  ],
}
`;

exports[`parser: object ObjectType: call signature 2`] = `
Object {
  "kind": "ObjectTypeLiteral",
  "props": Array [],
}
`;

exports[`parser: object ObjectType: modifier 1`] = `
Object {
  "kind": "ObjectTypeLiteral",
  "props": Array [
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "Identifier",
        "name": "a",
      },
      "optional": true,
      "readonly": true,
      "value": Object {
        "kind": "NumberType",
        "value": "number",
      },
    },
  ],
}
`;

exports[`parser: object ObjectType: shorthand 1`] = `
Object {
  "kind": "ObjectTypeLiteral",
  "props": Array [
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "Identifier",
        "name": "hello",
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "TypeReference",
        "typeName": Object {
          "kind": "Identifier",
          "name": "hello",
        },
      },
    },
  ],
}
`;

exports[`parser: object ObjectType: spread 1`] = `
Object {
  "kind": "ObjectTypeLiteral",
  "props": Array [
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "Identifier",
        "name": "hello",
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "TypeReference",
        "typeName": Object {
          "kind": "Identifier",
          "name": "hello",
        },
      },
    },
    Object {
      "kind": "TypeSpreadProperty",
      "param": Object {
        "kind": "TypeReference",
        "typeName": Object {
          "kind": "Identifier",
          "name": "obj",
        },
      },
    },
  ],
}
`;

exports[`parser: object ObjectType: whitespace in key 1`] = `
Object {
  "kind": "ObjectTypeLiteral",
  "props": Array [
    Object {
      "kind": "TypeObjectProperty",
      "name": Object {
        "kind": "StringLiteral",
        "value": "temp value",
      },
      "optional": false,
      "readonly": false,
      "value": Object {
        "kind": "NumberType",
        "value": "number",
      },
    },
  ],
}
`;

exports[`parser: object TypeObjectProperty 1`] = `
Object {
  "kind": "TypeObjectProperty",
  "name": Object {
    "kind": "Identifier",
    "name": "a",
  },
  "optional": false,
  "readonly": false,
  "value": Object {
    "kind": "NumberType",
    "value": "number",
  },
}
`;

exports[`parser: object TypeObjectProperty 2`] = `
Object {
  "kind": "TypeObjectProperty",
  "name": Object {
    "kind": "Identifier",
    "name": "b",
  },
  "optional": false,
  "readonly": false,
  "value": Object {
    "kind": "StringType",
    "value": "string",
  },
}
`;

exports[`parser: object TypeObjectProperty 3`] = `
Object {
  "kind": "TypeObjectProperty",
  "name": Object {
    "kind": "Identifier",
    "name": "c",
  },
  "optional": false,
  "readonly": false,
  "value": Object {
    "kind": "NumberTypeLiteral",
    "value": 1,
  },
}
`;

exports[`parser: object TypeObjectProperty 4`] = `
Object {
  "kind": "TypeObjectProperty",
  "name": Object {
    "kind": "Identifier",
    "name": "d",
  },
  "optional": false,
  "readonly": false,
  "value": Object {
    "kind": "StringTypeLiteral",
    "value": "abc",
  },
}
`;
